OLMIS-3238: Fixed gaps before optional fields on the cce details modal

--- a/src/cce-inventory-item-details/inventory-item-details.scss
+++ b/src/cce-inventory-item-details/inventory-item-details.scss
@@ -28,6 +28,14 @@
         margin: 0 0 0 50%;
     }
 
+    dl {
+        margin-bottom: 0;
+    }
+
+    dl + div {
+        margin-top: 1em;
+    }
+
     #additional-notes > dd {
         white-space: pre-line;
         word-break: break-word;
